Skills component updated

--- a/my-portfolio/src/styling/Skills.css
+++ b/my-portfolio/src/styling/Skills.css
@@ -9,6 +9,7 @@
     margin-right: 10px;
     background-color: yellow;
     border-radius: 1rem;
+    border: 3px solid white;
     color: black;
     font-weight: 700;
     text-align: center;
