--- a/my-portfolio/src/styling/WorkExperience.css
+++ b/my-portfolio/src/styling/WorkExperience.css
@@ -48,6 +48,7 @@
     .each_workexperience_header_flex{
         flex-direction: column;
         align-items: start;
+        margin-bottom: -10px;
     }
     .each_work_experience_timeline{
         margin-top: -15px;  
