--- a/my-portfolio/src/styling/WorkExperience.css
+++ b/my-portfolio/src/styling/WorkExperience.css
@@ -8,13 +8,22 @@
     width: 93%;
     margin-bottom: 1vw;
 }
+/* This div previously has card bootstrap css which I remove card from HTML and added border and border-radius in its css.*/
 .each_workexperience_div{
     transition: transform 0.3s;
     margin-bottom: 2vw;
+    border-bottom-right-radius: 1rem;
+    border-bottom-left-radius: 1rem;
+    border: 3px solid white;
 }
 .each_workexperience_div:hover{
     transform: scale(1.06);
     cursor: zoom-in;
+}
+/* This div previously has card-header bootstrap css which I remove card-header from HTML and added background-color and color in its css */
+.each_workexperience_header{
+    background-color: yellow;
+    color: black;
 }
 .each_workexperience_header_flex{
     display: flex;
@@ -48,7 +57,7 @@
     .each_workexperience_header_flex{
         flex-direction: column;
         align-items: start;
-        margin-bottom: -10px;
+        margin-bottom: 0px;
     }
     .each_work_experience_timeline{
         margin-top: -15px;  
